--- a/css/styles.css
+++ b/css/styles.css
@@ -471,7 +471,7 @@ border-top: none;
     letter-spacing: 0.02em;
     color: #f4f4fd;
     max-width: 264px;
-    margin-bottom: 16px;
+    
 }
 
 .social-title {
@@ -557,7 +557,7 @@ border-top: none;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 16px;
+  
     min-width: 165px;
     height: 40px;
     border: none;
@@ -707,23 +707,30 @@ border-top: none;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
      }
      
+         .modal-form-input::placeholder {
+             color: rgba(46, 47, 66, 0.4);
+             transition: 
+             color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+
     .modal-form-input:focus {
      border-color: #4D5AE5;
       }
+   .modal-form-input:focus::placeholder {
+       color: rgba(46, 47, 66, 0.8);
+   }
+   
     .modal-form-icon {
      position: absolute;
      top: 50%;
      left: 16px;
     transform: translateY(-50%);
-    stroke: #111111;
-     fill: none;
+    fill: #111111;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     pointer-events: none;
     }
             
     .modal-form-input:focus+.modal-form-icon {
     fill: #4D5AE5;
-    stroke: #4d5ae5;
      }
      .modal-form-textarea {
         margin-bottom: 16px;
@@ -786,10 +793,7 @@ background-color: transparent;
 border: none;
  fill: var(--checked-icon-color);
      }
-.agreement-checkbox-icon {
-  fill: currentColor;
-}
-            
+           
 .agreement-link {
 text-decoration-line: underline;
 text-decoration-skip-ink: none;
